--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,12 @@
 	text-align: center;
 	margin-left: 5px;
 	margin-right: 5px;
-	
+
 }
 
-.jsn_group_profile_contact_icon_mail_desktop
+.jsn_group_profile_contact_icon_mail_desktop a:hover{
+	/* color: red; */
+}
 
 .jsn_group_single_profile_wrapper {
 	margin-bottom: 20px;
@@ -95,6 +97,31 @@
 	display: none;
 }
 
+.jsn_group_profile_layout2_social {
+	display: inline-block;
+	width: 20px;
+	text-align: left;
+}
+
+.jsn_group_layout2_wrapper, .jsn_group_layout2_information {
+	width: 100%;
+	height: 100%;
+}
+
+.jsn_group_layout2_information_inner_wrapper {
+	height: 75px;
+	width: 100%;
+	/* background-color: white; */
+}
+
+.jsn_group_layout2_social_information {
+	height: 75px;
+	width: 15%;
+	float: right;
+	text-align: right;
+	font-size: 20px;
+	padding-right: 5px;
+}
 
 @media (min-width: 768px) {
 	.jsn_group_col_1, .jsn_group_col_2, .jsn_group_col_3, .jsn_group_col_4, .jsn_group_col_5, .jsn_group_col_6, .jsn_group_col_7, .jsn_group_col_8, .jsn_group_col_9, .jsn_group_col_10 {
@@ -105,7 +132,7 @@
 	}
 
 	.jsn_group_profile_wrapper {
-		font-size: 22px;	
+		font-size: 22px;
 	}
 }
 
@@ -164,8 +191,8 @@
 		padding-left: 15px;
 		padding-right: 15px;
 	}
-	
+
 	.jsn_group_profile_wrapper {
-		font-size: 28px;	
+		font-size: 28px;
 	}
 }
