--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-    opacity: 0;
+  opacity: 0;
 	-webkit-transition: all 300ms ease-out;
 	transition: all 300ms ease-out;
 }
@@ -46,95 +46,96 @@
 	transition: all 500ms ease-out;
 }
 
+
+
 .jsn_group_profile_name {
-	font-size: 1.0em;
-	margin-top: 25px;
+	margin-top: 10%;
 	color: white;
+	line-height: 1;
+	padding-bottom: 5%;
 }
+
 
 .jsn_group_profile_bereich {
-	font-size: 15px;
+	font-size: 60%;
 	margin-top: 15px;
 	color: white;
+	line-height: 1;
+	padding-bottom: 10px;
 }
 
-.jsn_group_profile_contact {
-	margin-top: 10%;
-	text-align: center;
-	height: 50px;
-	color: white;
+
+div.jsn_group_profile_contact_icons {
+	position: absolute;
+	width: 100%;
+	--height: 40px;
+	height: calc(var(--height) * 1.5);
+	bottom: 0;
+	line-height: 1;
 }
 
-.jsn_group_profile_contact_icon a {
-	border: 1px solid white; /*currentColor*/
-	color: white;
-	width: 50px;
-	height: 50px;
-	padding: 10px 5px;
+div.jsn_group_profile_contact_icon {
 	display: inline-block;
+	border: 1px solid white;
+	height: var(--height);
+	width: var(--height);
+	/* padding-top: calc(var(--height) / 5); */
 	border-radius: 50%;
-	line-height: 1.1rem;
-	font-size: 1.5rem;
 	text-align: center;
-	margin-left: 5px;
-	margin-right: 5px;
+	font-size: calc(var(--height)/2);
+	line-height: 0.5;
+	vertical-align: middle;
+	padding-top: calc(var(--height)/4);
+}
+
+div.jsn_group_profile_contact_icon i {
 
 }
 
-.jsn_group_profile_contact_icon_mail_desktop a:hover{
-	/* color: red; */
+
+.jsn_group_profile_contact_icons a  {
+	color: white !important;
+	/* cursor: pointer; */
+}
+
+.jsn_group_profile_contact_icons a:hover {
+	color: white !important;
+}
+
+.jsn_group_profile_contact_icon button {
+	border-radius: 50%;
+	height: var(--height);
+	width: var(--height);
+	border-color: transparent;
+	background-color: transparent;
+	margin-top: calc((-1)*var(--height)/4);
 }
 
 .jsn_group_single_profile_wrapper {
 	margin-bottom: 20px;
 }
 
-.jsn_group_profile_contact_icon_mail_mobile {
-	display: inline-block;
-}
 
-.jsn_group_profile_contact_icon_mail_desktop {
-	display: none;
-}
-
-.jsn_group_profile_layout2_social {
-	display: inline-block;
-	width: 20px;
-	text-align: left;
-}
-
-.jsn_group_layout2_wrapper, .jsn_group_layout2_information {
-	width: 100%;
-	height: 100%;
-}
-
-.jsn_group_layout2_information_inner_wrapper {
-	height: 75px;
-	width: 100%;
-	/* background-color: white; */
-}
-
-.jsn_group_layout2_social_information {
-	height: 75px;
-	width: 15%;
-	float: right;
-	text-align: right;
-	font-size: 20px;
-	padding-right: 5px;
-}
-
-@media (min-width: 768px) {
+@media (min-width: 480px) {
 	.jsn_group_col_1, .jsn_group_col_2, .jsn_group_col_3, .jsn_group_col_4, .jsn_group_col_5, .jsn_group_col_6, .jsn_group_col_7, .jsn_group_col_8, .jsn_group_col_9, .jsn_group_col_10 {
 		width: 100%;
+		font-size: 48px;
 	}
 	.jsn_group_single_profile_wrapper {
 		padding: 0px;
 	}
 
-	.jsn_group_profile_wrapper {
-		font-size: 22px;
-	}
 }
+
+@media (min-width: 750px) {
+	.jsn_group_col_1, .jsn_group_col_2, .jsn_group_col_3, .jsn_group_col_4, .jsn_group_col_5, .jsn_group_col_6, .jsn_group_col_7, .jsn_group_col_8, .jsn_group_col_9, .jsn_group_col_10 {
+		width: 100%;
+		font-size: 48px;
+	}
+	.jsn_group_single_profile_wrapper {
+		padding: 0px;
+	}
+
 
 
 @media (min-width: 900px) {
@@ -143,49 +144,43 @@
 	}
 	.jsn_group_col_1 {
 		width: 100%;
+		font-size: 48px;
 	}
 	.jsn_group_col_2 {
 		width: 50%;
+		font-size: 32px;
 	}
 	.jsn_group_col_3 {
 		width: 50%;
+		font-size: 32px;
 	}
 	.jsn_group_col_4 {
 		width: 50%;
+		font-size: 32px;
 	}
 	.jsn_group_col_5 {
 		width: 50%;
+		font-size: 32px;
 	}
 	.jsn_group_single_profile_wrapper {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
-	.jsn_group_profile_contact_icon_mail_mobile {
-		display: none;
-	}
-	.jsn_group_profile_contact_icon_mail_desktop {
-		display: inline-block;
-	}
 }
 
 @media (min-width: 1200px) {
-	.jsn_group_col_1, .jsn_group_col_2, .jsn_group_col_3, .jsn_group_col_4, .jsn_group_col_5, .jsn_group_col_6, .jsn_group_col_7, .jsn_group_col_8, .jsn_group_col_9, .jsn_group_col_10 {
-		float: left;
-	}
-	.jsn_group_col_1 {
-		width: 100%;
-	}
-	.jsn_group_col_2 {
-		width: 50%;
-	}
+
 	.jsn_group_col_3 {
 		width: 33.3333%;
+		font-size: 32px;
 	}
 	.jsn_group_col_4 {
 		width: 25%;
+		font-size: 24px;
 	}
 	.jsn_group_col_5 {
 		width: 20%;
+		font-size: 20px;
 	}
 	.jsn_group_single_profile_wrapper {
 		padding-left: 15px;
@@ -193,6 +188,6 @@
 	}
 
 	.jsn_group_profile_wrapper {
-		font-size: 28px;
+		/* font-size: 28px; */
 	}
 }
